--- a/EasyJob/Views/Admin/Login.cshtml
+++ b/EasyJob/Views/Admin/Login.cshtml
@@ -43,7 +43,7 @@
     function Login() {
         var employee = {};
         employee.Code = $("#employee_Code").val();
-        employee.Pwd = $("#employee_Pwd").val();
+        employee.PwdWeb = $("#employee_Pwd").val();
         var data = $.toJSON(employee);
 
         ShowErrorInfo("");//清空出错显示内容
