--- a/EasyJob/Views/File/Index.cshtml
+++ b/EasyJob/Views/File/Index.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Index";
 }
 
-<form action="File/ImportData" method="post" enctype="multipart/form-data">
+<form action="ImportData" method="post" enctype="multipart/form-data">
     <input type="text" name="cls" />
     <input type="file" name="UploadFile" />
-    <input type="file" name="UploadFile" />
+    @*<input type="file" name="UploadFile" />*@
     <input type="submit" value="上传" />
 </form>
