--- a/EasyJob/Views/EasyJob/RepairOrder.cshtml
+++ b/EasyJob/Views/EasyJob/RepairOrder.cshtml
@@ -29,7 +29,7 @@
     wx.config({
         debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
         appId: 'wx902209cd6a17ebf6', // 必填，公众号的唯一标识
-        timestamp: @Timestamp, // 必填，生成签名的时间戳
+        timestamp: '@Timestamp', // 必填，生成签名的时间戳
         nonceStr: '@Nonce', // 必填，生成签名的随机串
         signature: '@Signature',// 必填，签名，见附录1
         jsApiList: [
